remove transform and fix padding-spacing

--- a/_sass/global/button.scss
+++ b/_sass/global/button.scss
@@ -8,9 +8,9 @@
 .btn-allmyles {
   color: $white;
   background: $primaryBrandColor;
-  text-transform: uppercase;
-  padding: 1em 6em 0.85em 6em;
-  letter-spacing: 2px;
+
+  padding: 0.9em 3em 0.75em 3em;
+  letter-spacing: 1.3px;
 
   &:hover {
     color: $white;
